Desktop header styling done

--- a/index.html
+++ b/index.html
@@ -13,5 +13,22 @@
     <title>Alura Geek</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header-bg">
+      <div class="header container">
+        <div class="header-logo">
+          <img src="./images/logo.png" alt="Logotipo da Alura Geek" />
+        </div>
+        <div class="header-actions">
+          <div class="header-search-bg">
+            <input class="header-search-input" type="text" />
+            <button class="header-search-btn">
+              <img src="./images/icons/icon_lupa.png" />
+            </button>
+          </div>
+          <a class="secondary-button large-button" href="#">Login</a>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
