Tablet header styling done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <header class="header-bg">
       <div class="header container">
         <div class="header-logo">
-          <img src="./images/logo.png" alt="Logotipo da Alura Geek" />
+          <a href="/">
+            <img src="./images/logo.png" alt="Logotipo da Alura Geek" />
+          </a>
         </div>
         <div class="header-actions">
           <div class="header-search-bg">
