Created hero section styles and responsiveness

--- a/index.html
+++ b/index.html
@@ -32,5 +32,13 @@
         </div>
       </div>
     </header>
+
+    <section class="hero-bg">
+      <div class="hero container">
+        <h1>Dezembro promocional</h1>
+        <h2>Produtos selecionados com 33% de desconto</h2>
+        <a class="primary-button" href="#">Ver consoles</a>
+      </div>
+    </section>
   </body>
 </html>
