Criada seção de produtos, estilização e responsividade

--- a/index.html
+++ b/index.html
@@ -40,5 +40,218 @@
         <a class="primary-button" href="#">Ver consoles</a>
       </div>
     </section>
+
+    <section class="showcase container" id="starwars">
+      <div class="showcase-header">
+        <h3>Star Wars</h3>
+        <a href="#">
+          <span class="showcase-action">
+            Ver tudo
+            <img src="./images/icons/icon_arrow.png" />
+          </span>
+        </a>
+      </div>
+      <div class="products">
+        <div class="product">
+          <img
+            src="./images/products/star_wars1.png"
+            alt="Foto de uma caneca do Star Wars"
+          />
+          <h4>Caneca Star Wars</h4>
+          <span>R$ 60.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/star_wars2.png"
+            alt="Foto de bonecos do Star Wars"
+          />
+          <h4>Bonecos Star Wars</h4>
+          <span>R$ 90.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/star_wars3.png"
+            alt="Foto de um boneco do Star Wars"
+          />
+          <h4>Boneco Star Wars</h4>
+          <span>R$ 40.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/star_wars4.png"
+            alt="Foto de um boneco do Star Wars"
+          />
+          <h4>Boneco Star Wars</h4>
+          <span>R$ 45.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/star_wars5.png"
+            alt="Foto de um boneco do Star Wars"
+          />
+          <h4>Boneco Star Wars</h4>
+          <span>R$ 50.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/star_wars6.png"
+            alt="Foto de um boneco do Star Wars"
+          />
+          <h4>Boneco Star Wars</h4>
+          <span>R$ 70.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="showcase container" id="consoles">
+      <div class="showcase-header">
+        <h3>Consoles</h3>
+        <a href="#">
+          <span class="showcase-action">
+            Ver tudo
+            <img src="./images/icons/icon_arrow.png" />
+          </span>
+        </a>
+      </div>
+      <div class="products">
+        <div class="product">
+          <img
+            src="./images/products/console_1.png"
+            alt="Foto de um Xbox Series S"
+          />
+          <h4>Xbox Series S</h4>
+          <span>R$ 1.679,99</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/console_2.png"
+            alt="Foto de um PlayStation 5"
+          />
+          <h4>PlayStation 5</h4>
+          <span>R$ 4.665,78</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/console_3.png"
+            alt="Foto de um Nintendinho"
+          />
+          <h4>Nintendinho</h4>
+          <span>R$ 600.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/console_4.png"
+            alt="Foto de Nintendo Switch"
+          />
+          <h4>Nintendo Switch</h4>
+          <span>R$ 1.987,98</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/console_5.png"
+            alt="Foto de um Xbox Series X"
+          />
+          <h4>Xbox Series X</h4>
+          <span>R$ 4.876,99</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img src="./images/products/console_6.png" alt="Foto de um GameBoy" />
+          <h4>GameBoy</h4>
+          <span>R$ 99.99</span>
+          <a href="#">Ver produto</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="showcase container" id="diversos">
+      <div class="showcase-header">
+        <h3>Diversos</h3>
+        <a href="#">
+          <span class="showcase-action">
+            Ver tudo
+            <img src="./images/icons/icon_arrow.png" />
+          </span>
+        </a>
+      </div>
+      <div class="products">
+        <div class="product">
+          <img
+            src="./images/products/diversos_1.png"
+            alt="Foto de uma camiseta da Atari"
+          />
+          <h4>Camiseta da Atari</h4>
+          <span>R$ 80.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/diversos_2.png"
+            alt="Foto de uma camiseta da Nintendo"
+          />
+          <h4>Camiseta da Nintendo</h4>
+          <span>R$ 60.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/diversos_3.png"
+            alt="Foto de um action figure do Sonic"
+          />
+          <h4>Action Figure Sonic</h4>
+          <span>R$ 170.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/diversos_4.png"
+            alt="Foto de um despertador antigo"
+          />
+          <h4>Despertador</h4>
+          <span>R$ 20.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img src="./images/products/diversos_5.png" alt="Foto de um VR" />
+          <h4>VR</h4>
+          <span>R$ 900.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+
+        <div class="product">
+          <img
+            src="./images/products/diversos_6.png"
+            alt="Foto de um Picachu de pelúcia"
+          />
+          <h4>Picachu de Pelúcia</h4>
+          <span>R$ 60.00</span>
+          <a href="#">Ver produto</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
