--- a/index.html
+++ b/index.html
@@ -253,5 +253,45 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer-bg">
+      <div class="footer container">
+        <div class="footer-content">
+          <a href="/">
+            <img
+              class="logo"
+              src="./images/logo.png"
+              alt="Logotipo da Alura Geek"
+            />
+          </a>
+          <nav>
+            <ul class="footer-nav">
+              <li><a href="#">Quem somos nós</a></li>
+              <li><a href="#">Política de privacidade</a></li>
+              <li><a href="#">Programa fidelidade</a></li>
+              <li><a href="#">Nossas lojas</a></li>
+              <li><a href="#">Quero ser um franqueado</a></li>
+              <li><a href="#">Anuncie aqui</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer-form">
+          <h5>Fale conosco</h5>
+          <input type="text" />
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <button class="primary-button">Enviar mensagem</button>
+        </div>
+      </div>
+      <div class="dev">
+        <span>Desenvolvido por:</span>
+        <a target="_blank" href="https://www.arissonlima.dev">
+          <img
+            src="./images/logo_desenvolvedor_arisson_lima.png"
+            alt="Logotipo do desenvolvedor"
+          />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
