--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <img src="./images/icons/icon_lupa.png" />
             </button>
           </div>
-          <a class="secondary-button large-button" href="#">Login</a>
+          <a class="secondary-button large-button" href="./login.html">Login</a>
         </div>
       </div>
     </header>
